@@ -42,7 +42,7 @@ RESOURCES += qmidictl.qrc
 
 unix {
 
-	#VARIABLES
+	# variables
 	OBJECTS_DIR = .obj
 	MOC_DIR     = .moc
 	UI_DIR      = .ui
@@ -51,12 +51,13 @@ unix {
 		PREFIX = /usr/local
 	}
 
-	BINDIR = $$PREFIX/bin
-	DATADIR = $$PREFIX/share
+	BINDIR = $(bindir)
+	DATADIR = $(datadir)
 
-	DEFINES += DATADIR=\"$$DATADIR\" PKGDATADIR=\"$$PKGDATADIR\"
+	DEFINES += BINDIR=\"$$BINDIR\"
+	DEFINES += DATADIR=\"$$DATADIR\"
 
-	#MAKE INSTALL
+	# make install
 	INSTALLS += target desktop icon icon26 icon48 icon64
 
 	target.path = $$BINDIR
@@ -82,8 +83,8 @@ win32 {
 }
 
 symbian {
-        VERSION = 0.1.0
-        LIBS += -lcone -leikcore -lavkon
-        ICON += data/symbian/qmidictl.svg
-        TARGET.CAPABILITY += NetworkServices LocalServices
+	VERSION = 0.1.0
+	LIBS += -lcone -leikcore -lavkon
+	ICON += data/symbian/qmidictl.svg
+	TARGET.CAPABILITY += NetworkServices LocalServices
 }
